# teclat-fw

./: .clangd  .gitignore  west.yml
.github/workflows/: build-using-docker.yml  build-using-toolchain-bundle.yml
app/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
app/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
app/configuration/nrf54l15dk_nrf54l15_cpuapp/: buttons_def.h
app/src/: battery.c  battery.h  ble.c  ble.h  events.c  events.h  hid.c  hid.h  idle.c  idle.h  input.c  input.h  keyboard.c  keyboard.h  main.c  pairing.c  pairing.h
app/src/modules/: Kconfig  keymap.c  led_state.c
